# portus-dashboard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: styles.css  tailwind.config.js
host/: portus-dashboard.secrets  setup.sh
public/: styles.css
src/: config.rs  dashboard.rs  main.rs  news.rs  residents.rs  templates.rs  transportation.rs  weather.rs
templates/: dashboard.html  dashboard_primary.html  dashboard_secondary.html  news.html  residents.html  transportation.html  weather.html
