[package]
name = "portus-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = {version = "0.7.7", features = ["macros"]}
chrono = "0.4.38"
dotenv = "0.15.0"
once_cell = "1.20.2"
rand = "0.8.5"
reqwest = {version = "0.12.8", features = ["json", "blocking"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.132"
tokio = {version = "1.40.0", features = ["full"]}
